[package]
name = "auto-upload-outplayed"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
notify = "7.0.0"
lazy_static = "1.5.0"
serde_json = "1.0.133"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
sysinfo = "0.33.0"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
youtube-rs = "0.1.3"
oauth2 = "4.4.2"
